Revision history for Perl extension Riji

{{$NEXT}}

v0.3.2 2015-01-02T15:41:48Z

    - riji setup now generates .gitignore and cpanfile
    - depend on Path::Canonical
    - announce --force option when `riji publish` failed

v0.3.1 2015-01-02T07:34:52Z

    - [bugfix] care relative links

v0.3.0 2015-01-01T18:53:51Z

    - depends on Puncheur v0.3.0 or later
    - remove urgency replacing urls processes
    - add Riji::CLI::Publish::Scanner
    - fix Article#site_path and remove Entry#site_path
    - move `url` from Entry to Article.

v0.2.0 2014-12-26T06:39:52Z

    - [Experimental][feature] riji publish --force (trapple++)
    - change version declaration way

0.1.3 2014-08-06T10:15:59Z

    - `git symbolic-ref --short` is available after git 1.7.10, so care older version when publishing.

0.1.2 2014-08-06T08:51:04Z

    - stable sort order of Blog::tags()

0.1.1 2014-05-23T10:50:25Z

    - create dir unless article/entry (monmon++)

0.1.0 2014-05-17T08:17:13Z

    - depends on Puncheur 0.1.0

0.0.14 2014-05-06T04:29:06Z

    - [bugfix] Set more exact repository path if when `base_dir` is different from `repo_dir` (karupanerura)

0.0.13 2014-01-12T03:43:21Z

    - [bugfix] riji publish failed in some Operating systems which has case-sensitive filesystem (tsucchi)

0.0.12 2013-12-30T05:41:44Z

    - add repository status checks when `riji publish`

0.0.11 2013-10-08T17:05:49Z

    - add $config->{markup} (now, you can use Text::Markdown::Hoedown! etc.)

0.0.10 2013-09-10T03:17:24Z

    - refactor CLI::Publish/CLI::Setup
    - refactor tag handling in Model::Entry
    - fix Entry#file_history

0.0.9 2013-08-15T14:39:55Z

    - depend on App::Wallflower for `riji publish`

0.0.8 2013-08-10T06:40:35Z

    - depend on Text::Markdown::Discount 0.10 and use `with_html5_tags()`
    - parse === --- style h1 h2 as blog entry title

0.0.7 2013-08-05T13:06:37Z

    - fix deps
    - support multibyte tags (Experimental)

0.0.6 2013-08-03T15:22:56Z

    - fix deps